# wordle

./: Cargo.toml
crates/game/: Cargo.toml  build.rs
crates/game/src/: constants.rs  error.rs  feedback.rs  game.rs  letter.rs  lib.rs  main.rs  word_pool.rs  wordlists.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  input.rs  lib.rs  main.rs  theme.rs
crates/tui/src/widgets/: board.rs  keyboard.rs  mod.rs
crates/wordlists/: Cargo.toml
crates/wordlists-data/: Cargo.toml
crates/wordlists-data/src/de/: mod.rs
crates/wordlists-data/src/de/davidak/: mod.rs
crates/wordlists-data/src/de/dwds_lemmata/: mod.rs
crates/wordlists-processing/: Cargo.toml
crates/wordlists-processing/src/: lib.rs  ordering.rs  word.rs  word_set.rs
crates/wordlists-processing/src/stream/: boxed.rs  mod.rs  sinks.rs  word_stream.rs
crates/wordlists/data/original/: SOURCES.md
crates/wordlists/data/processed/: de.txt.zst
crates/wordlists/src/: lib.rs
crates/wordlists/src/data/: SOURCES.md  mod.rs
crates/wordlists/src/wordlist/: mod.rs
src/: lib.rs
src/wordlist/: error.rs  mod.rs  ordering.rs  word.rs  word_set.rs
src/wordlist/stream/: boxed.rs  mod.rs  ordering.rs  sinks.rs  terminal.rs  word_stream.rs
src/wordlist/stream/sources/: csv_file.rs  mod.rs  sorted_file.rs  unsorted_file.rs
src/wordlist/stream/transforms/: dedup.rs  filter.rs  filter_non_alphabetic.rs  lowercase.rs  merge.rs  mod.rs
wordlists/original/: SOURCES.md
wordlists/original/de/: dwds_lemmata_2026-01-01.csv.zst
wordlists/processed/: de.txt.zst
(+22 files in other folders)
