[package]
name = "wordle-game"
edition.workspace = true
version.workspace = true

[dependencies]
wordle-wordlists-processing = {path = "../wordlists-processing"}

[build-dependencies]
wordle-wordlists-processing = {path = "../wordlists-processing"}
wordle-wordlists-data = {path = "../wordlists-data"}
